[gd_scene load_steps=11 format=3 uid="uid://bn4rosv7id4aj"]

[ext_resource type="Script" path="res://scripts/enemies/skeleton/MeleeSkeleton.gd" id="1_25dh5"]
[ext_resource type="Script" path="res://scripts/enemies/skeleton/SceletonVision.gd" id="2_yasu4"]
[ext_resource type="Script" path="res://scripts/enemies/skeleton/SceletonSword.gd" id="3_ij2o5"]

[sub_resource type="BoxMesh" id="BoxMesh_hsvwq"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_j81o4"]
points = PackedVector3Array(0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4atws"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1h8k3"]
albedo_color = Color(0.823343, 0, 0.201703, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jav3w"]
material = SubResource("StandardMaterial3D_1h8k3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yd8v2"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_igcpd"]
material = SubResource("StandardMaterial3D_yd8v2")

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("attack_timer", "nav_agent", "vision_controller", "sword")]
top_level = true
collision_layer = 4
collision_mask = 15
script = ExtResource("1_25dh5")
attack_timer = NodePath("attack_timer")
gravity = 10.0
nav_agent = NodePath("NavigationAgent3D")
vision_controller = NodePath("vision_raycast_controller")
sword = NodePath("Sword")
sword_demage = 10
attack_speed = 5.0
speed = 2.0

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="vision_raycast_controller" type="Node3D" parent="." node_paths=PackedStringArray("raycasts")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_yasu4")
raycasts = [NodePath("RayCast3D"), NodePath("RayCast3D2"), NodePath("RayCast3D3"), NodePath("RayCast3D4"), NodePath("RayCast3D5"), NodePath("RayCast3D6"), NodePath("RayCast3D7")]

[node name="vision_timer" type="Timer" parent="vision_raycast_controller"]
wait_time = 0.05
autostart = true

[node name="RayCast3D" type="RayCast3D" parent="vision_raycast_controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.544962)
target_position = Vector3(0, 0, -12)
collision_mask = 11
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="RayCast3D2" type="RayCast3D" parent="vision_raycast_controller"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, -0.544962)
target_position = Vector3(0, 0, -12)
collision_mask = 11
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="RayCast3D3" type="RayCast3D" parent="vision_raycast_controller"]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 0, 0, -0.544962)
target_position = Vector3(0, 0, -12)
collision_mask = 11
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="RayCast3D4" type="RayCast3D" parent="vision_raycast_controller"]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0, 0, -0.544962)
target_position = Vector3(0, 0, -12)
collision_mask = 11
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="RayCast3D5" type="RayCast3D" parent="vision_raycast_controller"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, -0.544962)
target_position = Vector3(0, 0, -12)
collision_mask = 11
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="RayCast3D6" type="RayCast3D" parent="vision_raycast_controller"]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, 0, 0, -0.544962)
target_position = Vector3(0, 0, -12)
collision_mask = 11
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="RayCast3D7" type="RayCast3D" parent="vision_raycast_controller"]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0, 0, -0.544962)
target_position = Vector3(0, 0, -12)
collision_mask = 11
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="Sword" type="Area3D" parent="."]
transform = Transform3D(-4.30473e-08, -0.984808, 0.173648, 1, -4.37114e-08, 0, 7.5904e-09, 0.173648, 0.984808, -0.207255, 1.29121, -0.00263748)
collision_mask = 11
script = ExtResource("3_ij2o5")
timer = 3.0

[node name="sword_model" type="MeshInstance3D" parent="Sword"]
transform = Transform3D(0.1, -1.49012e-08, -7.45058e-09, -9.31323e-09, 1.5, -1.86265e-09, -3.72529e-09, -4.47035e-08, 0.1, -0.3, 1.083, -0.246)
mesh = SubResource("BoxMesh_hsvwq")
skeleton = NodePath("")

[node name="sword_collision" type="CollisionShape3D" parent="Sword"]
transform = Transform3D(0.1, -1.49012e-08, -7.45058e-09, -9.31323e-09, 1.5, -1.86265e-09, -3.72529e-09, -4.47035e-08, 0.1, -0.3, 1.083, -0.246)
shape = SubResource("ConvexPolygonShape3D_j81o4")

[node name="attack_timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.1, 0, 0, 0, 1, 0, 0, 0, 1.1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_4atws")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(0.909091, 0, 0, 0, 1, 0, 0, 0, 0.909091, 0, 0, 0)
mesh = SubResource("CapsuleMesh_jav3w")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(0.454545, 0, 0, 0, 0.5, 0, 0, 0, 0.0909091, 0, 0.5, -0.454545)
mesh = SubResource("BoxMesh_igcpd")
skeleton = NodePath("../..")

[connection signal="player_seen" from="vision_raycast_controller" to="." method="_on_vision_raycast_controller_player_seen"]
[connection signal="timeout" from="vision_raycast_controller/vision_timer" to="." method="_on_vision_timer_timeout"]
[connection signal="body_entered" from="Sword" to="Sword" method="_on_body_entered"]
[connection signal="player_in_sword" from="Sword" to="." method="_on_sword_player_in_sword"]
